Fix contrast issues

--- a/apps/www/src/app/(home)/page.module.css
+++ b/apps/www/src/app/(home)/page.module.css
@@ -89,7 +89,6 @@
 .main section a:not([class]):active,
 .main section a:not([class]):focus-visible,
 .main section a:not([class]):hover {
-  color: var(--colors-primary-dark);
   text-decoration: underline;
 }
 
